# mt_bench

./: .gitignore  README.md  execute.sh  pyproject.toml  requirements.txt
mt_benchmark/config/: models.yaml
mt_benchmark/config/language_support/: code_mapping.py  madlad_400.py  nllb.py  seamless.py  toucan.py
mt_benchmark/datasets/: base.py  flores.py
mt_benchmark/evaluation/: base.py  metrics.py  pipeline.py
mt_benchmark/models/: base.py  factory.py
mt_benchmark/models/api_services/: base.py
mt_benchmark/models/huggingface/: hf_model.py
scripts/: aggregate_results.py  batch_evaluate_all.py  check_language_support.py  evaluate.py  evaluate_api.py  flores_dataprep.py  test_dataset.py  test_model.py
src/config/: models.yaml
src/datasets/: base.py  flores.py
src/evaluation/: base.py  metrics.py  pipeline.py
src/models/: base.py  factory.py
src/models/api_services/: base.py
src/models/huggingface/: hf_model.py
