[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-benchmark"
version = "0.1.0"
description = "Machine Translation Benchmarking"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "pyyaml",
    "pandas",
    "sacrebleu",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]